--- a/style/style.css
+++ b/style/style.css
@@ -216,6 +216,19 @@ select {
     background-color: white;
 }
 
+.password-icon {
+    display: flex;
+    position: absolute;
+    top: 70%;
+    right: 30px;
+    width: 20px;
+    color: #0066ff;
+}
+
+.password-icon .feather-eye-off {
+    display: none;
+}
+
 /* TABLEAU */
 
 .table {
